--- a/20190721_01TGS2019.vcxproj.filters
+++ b/20190721_01TGS2019.vcxproj.filters
@@ -204,6 +204,9 @@
     <ClCompile Include="PostEffect\StrongBlurFilter.cpp">
       <Filter>ソース ファイル\PostEffect</Filter>
     </ClCompile>
+    <ClCompile Include="enemy.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="camera.h">
@@ -394,6 +397,9 @@
     </ClInclude>
     <ClInclude Include="PostEffect\SpikeNoiseController.h">
       <Filter>ヘッダー ファイル\PostEffect</Filter>
+    </ClInclude>
+    <ClInclude Include="enemy.h">
+      <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
