--- a/20190721_01TGS2019.vcxproj.filters
+++ b/20190721_01TGS2019.vcxproj.filters
@@ -34,6 +34,12 @@
     <Filter Include="ヘッダー ファイル\PostEffect">
       <UniqueIdentifier>{513c90f7-7388-4563-80ed-443e7ca8b52a}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\PlayerState">
+      <UniqueIdentifier>{bcdc9c91-95f0-4edb-9d61-c4fca7d1fa23}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ヘッダー ファイル\PlayerState">
+      <UniqueIdentifier>{ffbc60b5-ca90-4a97-b5ac-db99d5b0cb24}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="camera.cpp">
@@ -206,6 +212,12 @@
     </ClCompile>
     <ClCompile Include="Player.cpp">
       <Filter>ソース ファイル</Filter>
+    </ClCompile>
+    <ClCompile Include="PlayerJump.cpp">
+      <Filter>ソース ファイル\PlayerState</Filter>
+    </ClCompile>
+    <ClCompile Include="PlayerIdle.cpp">
+      <Filter>ソース ファイル\PlayerState</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -400,6 +412,12 @@
     </ClInclude>
     <ClInclude Include="Player.h">
       <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerJump.h">
+      <Filter>ヘッダー ファイル\PlayerState</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerIdle.h">
+      <Filter>ヘッダー ファイル\PlayerState</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
