--- a/20190721_01TGS2019.vcxproj.filters
+++ b/20190721_01TGS2019.vcxproj.filters
@@ -34,6 +34,12 @@
     <Filter Include="ヘッダー ファイル\PostEffect">
       <UniqueIdentifier>{513c90f7-7388-4563-80ed-443e7ca8b52a}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\Slice">
+      <UniqueIdentifier>{a2d88212-84c2-4eff-a6ad-b40d64b527d0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ヘッダー ファイル\Slice">
+      <UniqueIdentifier>{e96a1f9f-811d-48b7-86e7-20e7a869d269}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="camera.cpp">
@@ -203,6 +209,9 @@
     </ClCompile>
     <ClCompile Include="PostEffect\StrongBlurFilter.cpp">
       <Filter>ソース ファイル\PostEffect</Filter>
+    </ClCompile>
+    <ClCompile Include="SliceEffect.cpp">
+      <Filter>ソース ファイル\Slice</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -394,6 +403,9 @@
     </ClInclude>
     <ClInclude Include="PostEffect\SpikeNoiseController.h">
       <Filter>ヘッダー ファイル\PostEffect</Filter>
+    </ClInclude>
+    <ClInclude Include="SliceEffect.h">
+      <Filter>ヘッダー ファイル\Slice</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
