--- a/20190721_01TGS2019.vcxproj
+++ b/20190721_01TGS2019.vcxproj
@@ -163,6 +163,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MyLibrary.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="PlayerAttack.cpp" />
     <ClCompile Include="PlayerIdle.cpp" />
     <ClCompile Include="PlayerJump.cpp" />
     <ClCompile Include="PostEffectManager.cpp" />
@@ -233,6 +234,7 @@
     <ClInclude Include="main.h" />
     <ClInclude Include="MyLibrary.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="PlayerAttack.h" />
     <ClInclude Include="PlayerIdle.h" />
     <ClInclude Include="PlayerJump.h" />
     <ClInclude Include="PostEffectManager.h" />
