--- a/20190721_01TGS2019.vcxproj.filters
+++ b/20190721_01TGS2019.vcxproj.filters
@@ -231,6 +231,9 @@
     <ClCompile Include="SliceEffect.cpp">
       <Filter>ソース ファイル\Slice</Filter>
     </ClCompile>
+    <ClCompile Include="PlayerAttack.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="camera.h">
@@ -436,6 +439,9 @@
     </ClInclude>
     <ClInclude Include="SliceEffect.h">
       <Filter>ヘッダー ファイル\Slice</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerAttack.h">
+      <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
