--- a/20190721_01TGS2019.vcxproj.filters
+++ b/20190721_01TGS2019.vcxproj.filters
@@ -234,6 +234,9 @@
     <ClCompile Include="PlayerAttack.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Ground.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="camera.h">
@@ -441,6 +444,9 @@
       <Filter>ヘッダー ファイル\Slice</Filter>
     </ClInclude>
     <ClInclude Include="PlayerAttack.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Ground.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
