--- a/20190721_01TGS2019.vcxproj
+++ b/20190721_01TGS2019.vcxproj
@@ -126,6 +126,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="bgmManager.cpp" />
+    <ClCompile Include="BloodParticle.cpp" />
+    <ClCompile Include="BloodParticleController.cpp" />
     <ClCompile Include="camera.cpp" />
     <ClCompile Include="debugTimer.cpp" />
     <ClCompile Include="debugWindow.cpp" />
@@ -151,6 +153,7 @@
     <ClCompile Include="Framework\SkyBox.cpp" />
     <ClCompile Include="Framework\Transform.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GameParticleManager.cpp" />
     <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="Ground.cpp" />
     <ClCompile Include="imgui\imgui.cpp" />
@@ -191,6 +194,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bgmManager.h" />
+    <ClInclude Include="BloodParticle.h" />
+    <ClInclude Include="BloodParticleController.h" />
     <ClInclude Include="camera.h" />
     <ClInclude Include="debugTimer.h" />
     <ClInclude Include="debugWindow.h" />
@@ -221,6 +226,7 @@
     <ClInclude Include="Framework\SkyBox.h" />
     <ClInclude Include="Framework\Transform.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="GameParticleManager.h" />
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="Ground.h" />
     <ClInclude Include="imgui\imconfig.h" />
