--- a/imgui.ini
+++ b/imgui.ini
@@ -8,3 +8,13 @@ Pos=3,13
 Size=208,54
 Collapsed=0
 
+[Window][GameParticle]
+Pos=19,295
+Size=188,58
+Collapsed=0
+
+[Window][ParticleManager]
+Pos=12,146
+Size=259,134
+Collapsed=0
+
