--- a/20190721_01TGS2019.vcxproj.filters
+++ b/20190721_01TGS2019.vcxproj.filters
@@ -252,6 +252,9 @@
     <ClCompile Include="BloodParticleController.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Result.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="camera.h">
